# environment

./: README.md
uav_inspection/: CMakeLists.txt  README.md  package.xml  setup.py
uav_inspection/msg/: Path3D.msg  VoxelGrid3D.msg
uav_inspection/planning/: abc_path_planner.py  grid_map_builder.py  map_and_path_publishers.py
uav_inspection/rbf_training/: README.md  collect_logs.sh  train_rbf.py
uav_inspection/scripts/: abc_path_planner.py  build_voxel_map.py  formation_coordinator.py  generate_thesis_figures.py  generate_world.py  grid_map_publisher.py  path_publisher.py  ros2_grid_map_publisher.py  ros2_path_publisher.py  run_formation_control.sh  run_stage2_pipeline.sh  start_simulation.sh  visualize_map_and_path.py
uav_inspection/uav_inspection/: __init__.py
uav_inspection/worlds/: inspection_world.sdf  world_config.json
